setup sass files

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "Node",
     "Express"
   ],
-  "author": "Dere Haworth",
+  "author": "Derek Haworth",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/derek-haworth/portfolio/issues"
