--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-cssmin": "^0.2.0",
+    "gulp-express": "^0.3.5",
+    "gulp-live-server": "0.0.31",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-strip-css-comments": "^2.0.0",
